2011-01-13  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/FileLists.py: Move file/object listing functions
	  to S3/FileLists.py

2011-01-09  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 1.0.0
	  ----------------------

	* S3/PkgInfo.py: Updated to 1.0.0
	* NEWS: Updated.

2011-01-02  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Improved r457 (Don't crash when file disappears
	  before checking MD5).
	* s3cmd, s3cmd.1, format-manpage.pl: Improved --help text
	  and manpage.
	* s3cmd: Removed explicit processing of --follow-symlinks
	  (is cought by the default / main loop).

2010-12-24  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Set 10s socket timeout for read()/write().
	* s3cmd: Added --(no-)check-md5 for [sync].
	* run-tests.py, testsuite.tar.gz: Added testsuite for
	  the above.
	* NEWS: Document the above.
	* s3cmd: Don't crash when file disappears before
	  checking MD5.

2010-12-09  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 1.0.0-rc2
	  --------------------------

	* S3/PkgInfo.py: Updated to 1.0.0-rc2
	* NEWS, TODO, s3cmd.1: Updated.

2010-11-13  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Added support for remote-to-remote sync.
	  (Based on patch from Sundar Raman - thanks!)
	* run-tests.py: Testsuite for the above.

2010-11-12  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Fixed typo in "s3cmd du" error path.

2010-11-12  Michal Ludvig  <mludvig@logix.net.nz>

	* format-manpage.pl: new manpage auto-formatter
	* s3cmd.1: Updated using the above helper script
	* setup.py: Warn if manpage is too old.

2010-10-27  Michal Ludvig  <mludvig@logix.net.nz>

	* run-tests.py, testsuite.tar.gz: Keep the testsuite in
	  SVN as a tarball. There's too many "strange" things 
	  in the directory for it to be kept in SVN.

2010-10-27  Michal Ludvig  <mludvig@logix.net.nz>

	* TODO: Updated.
	* upload-to-sf.sh: Updated for new SF.net system

2010-10-26  Michal Ludvig  <mludvig@logix.net.nz>
